--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="zxx">
-	
+
 <head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Moviepoint - Online Movie,Vedio and TV Show HTML Template</title>
+		<title>MovieMangas - Online Movie,Vedio and TV Show HTML Template</title>
 		<!-- Favicon Icon -->
 		<link rel="icon" type="image/png" href="assets/img/favcion.png" />
 		<!-- Bootstrap CSS -->
@@ -49,18 +49,18 @@
 						</form>
 						<ul>
 							<li><a href="#">Welcome Guest!</a></li>
-							<li><a class="login-popup" href="#">Login</a></li>
+							<li><a class="login-popup" href="#">Нэвтрэх</a></li>
 						</ul>
 					</div>
 					<div class="menu-area">
 						<div class="responsive-menu"></div>
 					    <div class="mainmenu">
                             <ul id="primary-menu">
-                                <li><a class="active" href="index-2.html">Home</a></li>
-                                <li><a href="movies.html">Movies</a></li>
-                                <li><a href="celebrities.html">CelebritiesList</a></li>
-                                <li><a href="top-movies.html">Top Movies</a></li>
-                                <li><a href="blog.html">News</a></li>
+                                <li><a class="active" href="index-2.html">Нүүр</a></li>
+                                <li><a href="movies.html">Кино</a></li>
+                                <li><a href="celebrities.html">Бүтээгчид</a></li>
+                                <li><a href="top-movies.html">Шилдэг кино</a></li>
+                                <li><a href="blog.html">Мэдээ</a></li>
 								<li><a href="#">Pages <i class="icofont icofont-simple-down"></i></a>
 									<ul>
 										<li><a href="blog-details.html">Blog Details</a></li>
@@ -100,7 +100,7 @@
 						<a href="#"><i class="icofont icofont-camera"></i></a>
 					</div>
 				</form>
-				
+
 			</div>
 		</div>
 		<div class="buy-ticket">
@@ -110,7 +110,7 @@
 					<div class="row">
 						<div class="col-lg-8">
 							<div class="buy-ticket-box">
-								<h4>Buy Tickets</h4>
+								<h4>Үзэх</h4>
 								<h5>Seat</h5>
 								<h6>Screen</h6>
 								<div class="ticket-box-table">
@@ -340,12 +340,12 @@
 					<div class="row hero-area-slide">
 						<div class="col-lg-6 col-md-5">
 							<div class="hero-area-content">
-								<img src="assets/img/slide2.png" alt="about" />
+								<img src="assets/img/slide2.jpg" alt="about" />
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-7">
 							<div class="hero-area-content pr-50">
-								<h2>The Devil Princess</h2>
+								<h2>Trollhunters: Rise of the Titans</h2>
 								<div class="review">
 									<div class="author-review">
 										<i class="icofont icofont-star"></i>
@@ -354,9 +354,10 @@
 										<i class="icofont icofont-star"></i>
 										<i class="icofont icofont-star"></i>
 									</div>
-									<h4>180k voters</h4>
+									<h4>180 үнэлгээ</h4>
 								</div>
-								<p>She is a devil princess from the demon world. She grew up sheltered by her parents and doesn't really know how to be evil or any of the common actions,   She is unable to cry due to Keita's accidental first wish, despite needed for him to wish...</p>
+								<p>Arcadia may look like an ordinary town, but it lies at the center of magical and mystical lines that makes it a nexus for many battles among otherworldly creatures, including trolls, aliens and wizards. Now, various heroes will team-up in an epic adventure where they must fight the Arcane Order for control over the magic that binds them all together.
+</p>
 								<h3>Cast:</h3>
 								<div class="slide-cast">
 									<div class="single-slide-cast">
@@ -385,8 +386,8 @@
 									</div>
 								</div>
 								<div class="slide-trailor">
-									<h3>Watch Trailer</h3>
-									<a class="theme-btn theme-btn2" href="#"><i class="icofont icofont-play"></i> Tickets</a>
+									<h3>Watch trailer</h3>
+									<a class="theme-btn theme-btn2" href="trollhunter.html"><i class="icofont icofont-play"></i>Үзэх</a>
 								</div>
 							</div>
 						</div>
@@ -399,7 +400,7 @@
 						</div>
 						<div class="col-lg-6 col-md-7">
 							<div class="hero-area-content pr-50">
-								<h2>Last Avatar</h2>
+								<h2>9</h2>
 								<div class="review">
 									<div class="author-review">
 										<i class="icofont icofont-star"></i>
@@ -410,7 +411,8 @@
 									</div>
 									<h4>180k voters</h4>
 								</div>
-								<p>She is a devil princess from the demon world. She grew up sheltered by her parents and doesn't really know how to be evil or any of the common actions,   She is unable to cry due to Keita's accidental first wish, despite needed for him to wish...</p>
+								<p>When 9 first comes to life, he finds himself in a post-apocalyptic world. All humans are gone, and it is only by chance that he discovers a small community of others like him taking refuge from fearsome machines that roam the earth intent on their extinction. Despite being the neophyte of the group, 9 convinces the others that hiding will do them no good.
+</p>
 								<h3>Cast:</h3>
 								<div class="slide-cast">
 									<div class="single-slide-cast">
@@ -439,8 +441,8 @@
 									</div>
 								</div>
 								<div class="slide-trailor">
-									<h3>Watch Trailer</h3>
-									<a class="theme-btn theme-btn2" href="#"><i class="icofont icofont-play"></i> Tickets</a>
+									<h3>Шууд үзэх</h3>
+									<a class="theme-btn theme-btn2" href="https://hdtoday.cc/watch-movie/watch-9-full-18205.5300053"><i class="icofont icofont-play"></i> Tickets</a>
 								</div>
 							</div>
 						</div>
